--- a/Admin/Admin.css
+++ b/Admin/Admin.css
@@ -1,117 +1,164 @@
-const toggler document.getElementById ("sidebarToggleTop ");
-const sidebar document.getElementById ("sidebar");
-const content document.getElementById ("main-content");
-
-.dropdown:hover .dropdown-content{
-    display: block
+html,
+body {
+  margin: 0;
+  padding: 0;
+  font-family: Nunito, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+    "Segoe UI Symbol", "Noto Color Emoji";
 }
-.dropdown-content{
+
+.wrapper {
+  margin: 0;
+  width: 100vw;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+}
+#navbar {
+  flex-grow: 0;
+  background-color: #fff;
+}
+.content-wrapper {
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  height: 100vh;
+}
+
+.content {
+  flex-grow: 1;
+  overflow-y: scroll;
+}
+
+.list-unstyled li a,
+.sidebar > a {
+  color: #fffdaf;
+  height: 4.375rem;
+  text-decoration: none;
+  font-size: 1rem;
+  font-weight: 400;
+  padding: 1.5rem 1rem;
+  text-align: center;
+  letter-spacing: 0.05rem;
+  line-height: 2.5rem;
+  z-index: 1;
+}
+
+.sidebar > a {
+  text-transform: uppercase;
+  height: 50px;
+  line-height: 50px;
+}
+
+.footer {
+  flex-grow: 0;
+  margin-bottom: 0;
+  background-color: rgba(17, 16, 16, 0.719);
+  width: 100%;
+  margin: 0;
+}
+
+.sidebar {
+  height: 100vh;
+  background-color: #1c003d;
+  width: 20%;
+}
+
+.table-responsive {
+  padding: 5px;
+}
+
+.table-bordered {
+  box-sizing: border-box;
+  background-color: #ffffdd;
+  border: 0;
+  border-collapse: collapse;
+}
+
+tr,
+th,
+td {
+  border: 1px solid hsl(226, 30%, 92%);
+  text-align: left;
+  padding: 5px;
+}
+
+.topbar #sidebarToggleTop {
+  height: 2.5rem;
+  width: 2.5rem;
+  border-color: transparent;
+  border-radius: 50% !important;
+  font-weight: 400;
+  color:#3d0000;
+  text-decoration: none;
+  margin-left: 15px;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
+    border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+.bg-warning {
+  display: inline;
+  background: #ba2121;
+  border-radius: 4px;
+  padding: 5px 10px;
+  height: 15px;
+  line-height: 15px;
+  color: #555;
+}
+
+.bg-success {
+  display: inline;
+  border: none;
+  font-weight: 400;
+  background: #10a4ee;
+  border-radius: 4px;
+  padding: 5px 10px;
+  height: 15px;
+  line-height: 15px;
+  color: #f5f5f5;
+}
+
+.bg-primary {
+  display: block;
+  border: none;
+  font-weight: 400;
+  background: #79aec8;
+  border-radius: 4px;
+  padding: 5px 10px;
+  height: 15px;
+  line-height: 15px;
+  color: #555555;
+}
+
+/* Extra small devices (portrait phones, less than 576px) */
+/* No media query for `xs` since this is the default in Bootstrap */
+
+/* Small devices (landscape phones, 576px and up) */
+@media screen and (max-width: 576px) {
+  .sidebar {
     display: none;
-    right: 0;
-    top: 100%;
-    position: absolute;
-    padding-top: 5px;
-    background-color: aliceblue;
-    box-shadow: 0 0 1.5rem 1.70rem 0 rebeccapurple !important;
-    z-index: 9999;
-}
-.table-
-    height auto;
-    width: 200px;
-    background: #79ae79;
-    border-radius: 5px;
-    padding: 5px 10px;
-    line-height: 15px;
-    color: #000;
-}
-.body, td, input, textarea, select {
-    margin: 0;
-    font-family: Roboto,RobotoDraft,Helvetica,Arial,sans-serif;
-}
-btn{
-    display: inline-block;
-    background:#ff532b;
-    color: #ffff55;
-    padding: 6px 20px;
-    margin: 30px 0;
-    border-radius: 60px;
-    transition: background 0.5s;
-} 
- .btn :hover{
-     background: #a0ee10;
- }
-.header{
-    background-image:url("images/hd\ webpage.jpg");
-          background-color: #cccccccc;
-          background-size:cover;
-          background-repeat: no-re
-}
-.header row{
-          margin-top: 70px;
-         peat;
-}
-.categories{
-    margin: 60px 0;
- }
-.col-3{
-    flex-basis: 30%;
-    min-width: 250px;
-    margin-bottom: 300px;
-}
-.col-3{
-    width: 100%;
-}
-.small-container{
-    max-width: 1088px;
-    margin: auto;
-    padding-left: 25px;
-    padding-right: 25px;
-}
-.col-4{
-    flex-basis: 25%;
-    padding: 10px;
-    min-width: 200;
-    margin-bottom: 50px;
-    transition: transform 0.5s;
+  }
 
-}
-.col-4 img{
+  .content-wrapper {
     width: 100%;
+  }
 }
-.title{
-    text-align: center;
-    margin: 0 auto 90px;
-    position: relative;
-    line-height: 60px;
-    color: #555;
+
+@media screen and (min-width: 576px) {
+  .topbar #sidebarToggleTop {
+    display: none;
+  }
 }
-.title ::after{
-    content:'';
-    background: #ff523b;
-    width: 90px;
-    height: 5px;
-    border-radius: 5px;
-    position: absolute;
-    bottom: 0;
-    left: 50%;
-    transform: translateX(-50%);
+
+/* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) {
 }
-.h4{
-    color: rgb(85, 85, 85);
-    font-weight: normal;
+
+/* Large devices (desktops, 992px and up) */
+@media (min-width: 992px) {
 }
-.col-4 p{
-    font-size: 14px;  
+
+/* Extra large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {
 }
-.rating{
-    color:#ff523b 
-}
-.col-4:hover{
-    transform: translateY(-5px)
-}
-.col-5{
-    flex-basis: 25%;
-    padding: 10px;
-    min-width: 200;
-    margin-bottom: 50px;
-    transition: transform 0.5s;
